--- a/Sample/Sample.csproj
+++ b/Sample/Sample.csproj
@@ -13,8 +13,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WebApi.BasicAuth.Sample</RootNamespace>
-    <AssemblyName>WebApi.BasicAuth.Sample</AssemblyName>
+    <RootNamespace>BasicAuthSample</RootNamespace>
+    <AssemblyName>BasicAuthSample</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
