--- a/Sample/Web.config
+++ b/Sample/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <configSections>
-    <section name="basicAuth" type="WebApi.BasicAuth.BasicAuthSection" />
+    <section name="basicAuth" type="WebApi.BasicAuth.BasicAuthSection, WebApi.BasicAuth" />
   </configSections>
   <basicAuth>
     <users>
