--- a/WebApi.BasicAuth/WebApi.BasicAuth.csproj
+++ b/WebApi.BasicAuth/WebApi.BasicAuth.csproj
@@ -28,7 +28,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\build\Release\Libs\</OutputPath>
-    <DefineConstants>TRACE;NET45</DefineConstants>
+    <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -66,6 +66,7 @@
     <Compile Include="UserCollection.cs" />
     <Compile Include="User.cs" />
     <None Include="packages.config" />
+    <None Include="WebApi.BasicAuth.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
